# generate_parameter_library

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  CMakeLists.txt  MIGRATION.md  README.md  fix_321.py  gen_param_struct.py  generate_parameter_library.kilted.repos  generate_parameter_library.lyrical.repos  main.cpp  upstream.repos
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: mergify.yml
example/: CHANGELOG.rst  CMakeLists.txt  README.md  main.cpp  package.xml
example/config/: implementation.yaml
example/include/gen_param_struct_example/: validators.hpp
example/include/generate_parameter_library_example/: example_validators.hpp  minimal_publisher.hpp  validators.hpp
example/include/parameters/: admittance_controller.h
example/src/: main.cpp  minimal_publisher.cpp  parameters.yaml
example/test/: descriptor_test_gtest.cpp  example_params.yaml  example_test_gmock.cpp  example_test_gtest.cpp  launch.test.py  test_params_consistency.cpp
example_cmake_python/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
example_cmake_python/cmake_generate_parameter_module_example/: custom_validation.py  minimal_publisher.py  parameters.yaml
example_cmake_python/config/: implementation.yaml
example_external/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
example_external/config/: implementation.yaml  missing_required.yaml
example_external/include/generate_parameter_library_example_external/: minimal_publisher_external.hpp
example_external/src/: minimal_publisher_external.cpp
example_external/test/: descriptor_test_gtest.cpp  example_test_gtest.cpp  launch.test.py
example_python/: CHANGELOG.rst  README.md  package.xml  setup.py
example_python/config/: implementation.yaml
example_python/generate_parameter_module_example/: .gitignore  admittance_parameters.py  custom_validation.py  minimal_publisher.py  parameters.yaml
example_python/test/: test_copyright.py  test_flake8.py  test_load_modules.py  test_parameters.py  test_params_consistency.py  test_pep257.py
gen_param_struct/: CMakeLists.txt  gen_param_struct.cmake  gen_param_struct.py  package.xml
gen_param_struct/include/gen_param_struct/: validators.hpp
gen_param_struct/scripts/: gen_param_struct.py
gen_param_struct/scripts/templates/: template.txt
gen_param_struct_example/: CMakeLists.txt  main.cpp  package.xml
gen_param_struct_example/include/: validators.hpp
gen_param_struct_example/include/config/: admittance_controller.h  data.yaml  definition.yaml  implementation.yaml
generate_parameter_library/: CHANGELOG.rst  CMakeLists.txt  generate_parameter_library-extras.cmake  package.xml  rosdoc2.yaml
generate_parameter_library/cmake/: README.md  generate_parameter_library.cmake  generate_parameter_library_py_codegen.cmake
generate_parameter_library/doc/: conf.py
generate_parameter_library_py/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
generate_parameter_library_py/generate_parameter_library_py/: PythonConvertions.py  code_gen_utils.py  cpp_conversions.py  cpp_convertions.py  cpptypes.py  generate_cpp_header.py  generate_markdown.py  generate_python_header.py  generate_python_module.py  generate_rst.py  jinja_main.py  main.py  parse_yaml.py  python_conversions.py  python_convertions.py  python_validators.py  setup_helper.py  string_filters_cpp.py
generate_parameter_library_py/generate_parameter_library_py/cpp_templates/: validators.hpp
generate_parameter_library_py/generate_parameter_library_py/jinja_templates/: declare_parameter  declare_parameter_set  declare_parameter_validation  declare_runtime_parameter  declare_struct  dynamic_declare_parameter  dynamic_update_parameter  if_else_statement  if_statement  parameter_library_header  parameter_listener  parameter_validation  remove_dynamic_parameter  remove_runtime_parameter  set_parameter  set_runtime_parameter  set_stack_params  update_parameter  update_parameter_validation  update_runtime_parameter
generate_parameter_library_py/generate_parameter_library_py/jinja_templates/cpp/: declare_parameter  declare_runtime_parameter  declare_variable  parameter_library_header  remove_runtime_parameter  set_parameter  set_runtime_parameter  update_parameter  update_runtime_parameter
generate_parameter_library_py/generate_parameter_library_py/templates/: template.txt
generate_parameter_library_py/generate_parameter_library_py/test/: YAML_parse_error_test.py  bad.yaml  conflicting_element_bounds.yaml  conflicting_scalar_bounds.yaml  conflicting_scalar_bounds_exclusive.yaml  conflicting_scalar_bounds_inclusive.yaml  conflicting_scalar_bounds_mixed_1.yaml  conflicting_scalar_bounds_mixed_2.yaml  conflicting_scalar_bounds_with_bounds.yaml  invalid_parameter_type.yaml  invalid_syntax.yaml  mapped_parameter_test.py  missing_type.yaml  nested_map_keys.yaml  nested_map_test.yaml  test_markdown_generation.py  test_nested_map.py  test_nested_map_fix.py  valid_parameters.yaml  valid_parameters_with_none_type.yaml  validation_only_parameters.yaml  wrong_default_type.yaml
generate_parameter_library_py/generate_parameter_library_py/validators/: validators.hpp
generate_parameter_library_py/scripts/: generate_parameter_library_cpp  generate_parameter_library_markdown  generate_parameter_library_python
generate_parameter_library_py/test/: test_copyright.py
parameter_traits/: CHANGELOG.rst  CMakeLists.txt  package.xml
parameter_traits/include/parameter_traits/: comparison.hpp  fixed_size_types.hpp  parameter_traits.hpp  result.hpp  validators.hpp
parameter_traits/src/: validators.cpp
parameter_traits/test/: CMakeLists.txt  comparison_tests.cpp  validators_tests.cpp
parameter_validators/: CMakeLists.txt  package.xml
parameter_validators/include/parameter_validators/: comparison.hpp  parameter_validators.hpp  result.hpp
parameter_validators/test/: CMakeLists.txt  comparison_tests.cpp
tcb_span/: CHANGELOG.rst  CMakeLists.txt  package.xml
tcb_span/include/tcb_span/: span.hpp
tcb_span/test/: CMakeLists.txt  span_tests.cpp
(+53 files in other folders)
