<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmake_generate_parameter_module_example</name>
  <version>0.4.0</version>
  <description>Example usage of generate_parameter_library for a python module with cmake.</description>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
  <license>BSD-3-Clause</license>
  <author email="paul.gesel@picknik.ai">Paul Gesel</author>

  <depend>generate_parameter_library</depend>
  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
