<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>generate_parameter_library_py</name>
  <version>0.6.1</version>
  <description>Python to generate ROS parameter library.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">bmagyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">christophfroehlich</maintainer>
  <maintainer email="nathanbrooks@picknik.ai">Nathan Brooks</maintainer>
  <maintainer email="shaurya.kumar@picknik.ai">Shaurya Kumar</maintainer>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
  <license>BSD-3-Clause</license>
  <author email="paul.gesel@picknik.ai">Paul Gesel</author>

  <depend>python3</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-typeguard</depend>
  <depend>python3-yaml</depend>

  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>hydra_cpack</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
