<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parameter_traits</name>
  <version>0.6.0</version>
  <description>Functions and types for rclcpp::Parameter</description>
  <maintainer email="bence.magyar.robotics@gmail.com">bmagyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">christophfroehlich</maintainer>
  <maintainer email="nathanbrooks@picknik.ai">Nathan Brooks</maintainer>
  <maintainer email="shaurya.kumar@picknik.ai">Shaurya Kumar</maintainer>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rsl</depend>
  <depend>tcb_span</depend>
  <depend>tl_expected</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <export>
    <deprecated>
      This package will be removed in Lyrical Luth. Instead, use the
      rsl or tl_expected packages directly for similar functionality.
    </deprecated>
</export>
  </export>
</package>
